kubernetes/apps/kafka/kafka-ui/startup-probe-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  template:
    spec:
      containers:
        - name: kafka-ui
          startupProbe:
            failureThreshold: 15
